--- a/themes/coop-radio/style.css
+++ b/themes/coop-radio/style.css
@@ -780,7 +780,7 @@ a {
   background-color: #2c2c2c;
   height: 4.5rem; }
   .banner--dark, .banner--dark a {
-    color: #fff !important; }
+    color: #fff; }
   @media (min-width: 1080px) {
     .banner--dark {
       position: initial; } }
@@ -816,6 +816,8 @@ a {
           align-items: center;
   width: 90%;
   margin: 0 auto; }
+  .banner__container .main-navigation.toggled ul a {
+    color: #2c2c2c; }
 
 .menu-toggle {
   background-image: url("../../images/menu-bar.png");
